--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -24517,66 +24517,103 @@ Evaluator can use real name or nickname.</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkHButtonBox" id="hbuttonbox9">
+                                          <widget class="GtkHBox" id="hbox87">
                                             <property name="visible">True</property>
-                                            <property name="layout_style">spread</property>
+                                            <property name="spacing">12</property>
                                             <child>
-                                              <widget class="GtkButton" id="button_encoder_capture">
-                                                <property name="label" translatable="yes">Capture from encoder</property>
+                                              <widget class="GtkHButtonBox" id="hbuttonbox9">
                                                 <property name="visible">True</property>
-                                                <property name="can_focus">True</property>
-                                                <property name="can_default">True</property>
-                                                <property name="receives_default">True</property>
-                                                <property name="use_underline">True</property>
-                                                <signal name="clicked" handler="on_button_encoder_capture_clicked"/>
+                                                <property name="layout_style">spread</property>
+                                                <child>
+                                                  <widget class="GtkButton" id="button_encoder_capture">
+                                                    <property name="label" translatable="yes">Capture from encoder</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="can_default">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <property name="use_underline">True</property>
+                                                    <signal name="clicked" handler="on_button_encoder_capture_clicked"/>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkButton" id="button_encoder_recalculate">
+                                                    <property name="label" translatable="yes">Recalculate</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="can_default">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <property name="use_underline">True</property>
+                                                    <signal name="clicked" handler="on_button_encoder_recalculate_clicked"/>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">1</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkButton" id="button_encoder_load_signal">
+                                                    <property name="label">Load signal</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <signal name="clicked" handler="on_button_encoder_load_signal_clicked"/>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">2</property>
+                                                  </packing>
+                                                </child>
                                               </widget>
                                               <packing>
-                                                <property name="expand">False</property>
-                                                <property name="fill">False</property>
                                                 <property name="position">0</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkButton" id="button_encoder_recalculate">
-                                                <property name="label" translatable="yes">Recalculate</property>
+                                              <widget class="GtkHBox" id="hbox93">
                                                 <property name="visible">True</property>
-                                                <property name="can_focus">True</property>
-                                                <property name="can_default">True</property>
-                                                <property name="receives_default">True</property>
-                                                <property name="use_underline">True</property>
-                                                <signal name="clicked" handler="on_button_encoder_recalculate_clicked"/>
+                                                <property name="spacing">4</property>
+                                                <child>
+                                                  <widget class="GtkProgressBar" id="encoder_pulsebar_capture">
+                                                    <property name="visible">True</property>
+                                                    <property name="activity_mode">True</property>
+                                                    <property name="show_text">True</property>
+                                                    <property name="pulse_step">0.10000000149</property>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkButton" id="button_encoder_capture_cancel">
+                                                    <property name="label" translatable="yes">Cancel</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="sensitive">False</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="can_default">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <property name="use_underline">True</property>
+                                                    <signal name="clicked" handler="on_button_encoder_cancel_clicked"/>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">1</property>
+                                                  </packing>
+                                                </child>
                                               </widget>
                                               <packing>
                                                 <property name="expand">False</property>
                                                 <property name="fill">False</property>
                                                 <property name="position">1</property>
-                                              </packing>
-                                            </child>
-                                            <child>
-                                              <widget class="GtkProgressBar" id="encoder_pulsebar_capture">
-                                                <property name="visible">True</property>
-                                                <property name="activity_mode">True</property>
-                                                <property name="show_text">True</property>
-                                                <property name="pulse_step">0.10000000149</property>
-                                              </widget>
-                                              <packing>
-                                                <property name="expand">False</property>
-                                                <property name="fill">False</property>
-                                                <property name="position">2</property>
-                                              </packing>
-                                            </child>
-                                            <child>
-                                              <widget class="GtkButton" id="button_encoder_load_signal">
-                                                <property name="label">Load signal</property>
-                                                <property name="visible">True</property>
-                                                <property name="can_focus">True</property>
-                                                <property name="receives_default">True</property>
-                                                <signal name="clicked" handler="on_button_encoder_load_signal_clicked"/>
-                                              </widget>
-                                              <packing>
-                                                <property name="expand">False</property>
-                                                <property name="fill">False</property>
-                                                <property name="position">3</property>
                                               </packing>
                                             </child>
                                           </widget>
@@ -25210,8 +25247,7 @@ Evaluator can use real name or nickname.</property>
                                         <child>
                                           <widget class="GtkHBox" id="hbox74">
                                             <property name="visible">True</property>
-                                            <property name="spacing">20</property>
-                                            <property name="homogeneous">True</property>
+                                            <property name="spacing">12</property>
                                             <child>
                                               <widget class="GtkButton" id="button_encoder_analyze">
                                                 <property name="label" translatable="yes">Analyze</property>
@@ -25232,12 +25268,40 @@ Evaluator can use real name or nickname.</property>
                                               </packing>
                                             </child>
                                             <child>
-                                              <widget class="GtkProgressBar" id="encoder_pulsebar_analyze">
-                                                <property name="width_request">150</property>
+                                              <widget class="GtkHBox" id="hbox79">
                                                 <property name="visible">True</property>
-                                                <property name="activity_mode">True</property>
-                                                <property name="show_text">True</property>
-                                                <property name="pulse_step">0.10000000149</property>
+                                                <property name="spacing">6</property>
+                                                <child>
+                                                  <widget class="GtkProgressBar" id="encoder_pulsebar_analyze">
+                                                    <property name="width_request">150</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="activity_mode">True</property>
+                                                    <property name="show_text">True</property>
+                                                    <property name="pulse_step">0.10000000149</property>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkButton" id="button_encoder_analyze_cancel">
+                                                    <property name="label" translatable="yes">Cancel</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="sensitive">False</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="can_default">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <property name="use_underline">True</property>
+                                                    <signal name="clicked" handler="on_button_encoder_cancel_clicked"/>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="fill">False</property>
+                                                    <property name="position">1</property>
+                                                  </packing>
+                                                </child>
                                               </widget>
                                               <packing>
                                                 <property name="expand">False</property>
